# real_estate_la

./: README.md  pyproject.toml
notebooks/: Untitled.ipynb
real_estate_la/: enricher.py  guy_ritchie.py  main.py
